--- a/src/main/resources/fxml/librarian.fxml
+++ b/src/main/resources/fxml/librarian.fxml
@@ -15,7 +15,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.crowvalley.tawelib.controller.LibrarianHomeController">
    <children>
       <TabPane prefHeight="403.0" prefWidth="640.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
