--- a/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
@@ -24,9 +24,9 @@
             <center>
                 <TableView fx:id="tblResources" prefHeight="302.0" prefWidth="416.0" BorderPane.alignment="CENTER">
                     <columns>
-                        <TableColumn prefWidth="70.0" resizable="false" text="Type" />
-                        <TableColumn prefWidth="479.0" resizable="false" text="Title" />
-                        <TableColumn prefWidth="70.0" resizable="false" text="Year" />
+                        <TableColumn fx:id="clmType" prefWidth="70.0" resizable="false" text="Type" />
+                        <TableColumn fx:id="clmTitle" prefWidth="479.0" resizable="false" text="Title" />
+                        <TableColumn fx:id="clmYear" prefWidth="70.0" resizable="false" text="Year" />
                     </columns>
                     <BorderPane.margin>
                         <Insets left="10.0" right="10.0" top="10.0" />
