--- a/src/main/resources/fxml/librarian/librarianLoansTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianLoansTab.fxml
@@ -7,15 +7,15 @@
 <Tab xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" closable="false" text="Loans"
      fx:controller="com.crowvalley.tawelib.controller.librarian.LibrarianLoansTabController">
     <content>
-        <BorderPane prefHeight="200.0" prefWidth="200.0">
+        <BorderPane>
             <center>
                 <TableView fx:id="tblLoans" prefHeight="298.0" prefWidth="640.0" BorderPane.alignment="CENTER">
                     <columns>
-                        <TableColumn prefWidth="273.0" resizable="false" text="Copy" />
-                        <TableColumn prefWidth="100.0" resizable="false" text="Borrower" />
-                        <TableColumn prefWidth="82.0" resizable="false" text="Start Date" />
-                        <TableColumn prefWidth="82.0" resizable="false" text="End Date" />
-                        <TableColumn prefWidth="82.0" resizable="false" text="Return Date" />
+                        <TableColumn fx:id="colCopy" prefWidth="273.0" resizable="false" text="Copy" />
+                        <TableColumn fx:id="colBorrower" prefWidth="100.0" resizable="false" text="Borrower" />
+                        <TableColumn fx:id="colStartDate" prefWidth="82.0" resizable="false" text="Start Date" />
+                        <TableColumn fx:id="colEndDate" prefWidth="82.0" resizable="false" text="End Date" />
+                        <TableColumn fx:id="colReturnDate" prefWidth="82.0" resizable="false" text="Return Date" />
                     </columns>
                     <BorderPane.margin>
                         <Insets left="10.0" right="10.0" top="10.0" />
