--- a/src/main/resources/fxml/librarian/librarianUsersTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianUsersTab.fxml
@@ -24,11 +24,11 @@
             <center>
                 <TableView fx:id="tblUsers" prefHeight="302.0" prefWidth="416.0" BorderPane.alignment="CENTER">
                     <columns>
-                        <TableColumn prefWidth="80.0" resizable="false" text="Username" />
-                        <TableColumn prefWidth="200.0" resizable="false" text="Name" />
-                        <TableColumn prefWidth="100.0" resizable="false" text="Phone Number" />
-                        <TableColumn prefWidth="180.0" resizable="false" text="Address" />
-                        <TableColumn prefWidth="60.0" resizable="false" text="Balance" />
+                        <TableColumn fx:id="colUsername" prefWidth="80.0" resizable="false" text="Username" />
+                        <TableColumn fx:id="colName" prefWidth="200.0" resizable="false" text="Name" />
+                        <TableColumn fx:id="colPhone" prefWidth="100.0" resizable="false" text="Phone Number" />
+                        <TableColumn fx:id="colAddress" prefWidth="180.0" resizable="false" text="Address" />
+                        <TableColumn fx:id="colBalance" prefWidth="60.0" resizable="false" text="Balance" />
                     </columns>
                     <BorderPane.margin>
                         <Insets left="10.0" right="10.0" top="10.0" />
