--- a/src/main/resources/fxml/librarian/librarianFinesAndPaymentsTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianFinesAndPaymentsTab.fxml
@@ -9,11 +9,11 @@
     <content>
         <BorderPane prefHeight="200.0" prefWidth="200.0">
             <center>
-                <TableView fx:id="tblFines" prefHeight="302.0" prefWidth="622.0" BorderPane.alignment="CENTER">
+                <TableView fx:id="tblFinesAndPayments" prefHeight="302.0" prefWidth="622.0" BorderPane.alignment="CENTER">
                     <columns>
-                        <TableColumn prefWidth="280.0" resizable="false" text="Username" />
-                        <TableColumn prefWidth="170.0" resizable="false" text="Amount" />
-                        <TableColumn prefWidth="170.0" resizable="false" text="Fine or Payment?" />
+                        <TableColumn fx:id="colUsername" prefWidth="280.0" resizable="false" text="Username" />
+                        <TableColumn fx:id="colAmount" prefWidth="170.0" resizable="false" text="Amount" />
+                        <TableColumn fx:id="colType" prefWidth="170.0" resizable="false" text="Fine or Payment?" />
                     </columns>
                     <BorderPane.margin>
                         <Insets left="10.0" right="10.0" top="10.0" />
