--- a/src/main/resources/fxml/librarian/librarianHome.fxml
+++ b/src/main/resources/fxml/librarian/librarianHome.fxml
@@ -6,7 +6,7 @@
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.crowvalley.tawelib.controller.librarian.LibrarianHomeController">
    <children>
-      <TabPane prefHeight="403.0" prefWidth="640.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" prefHeight="403.0" prefWidth="640.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
            <fx:include fx:id="tabResources" source="librarianResourcesTab.fxml" />
            <fx:include fx:id="tabLoans" source="librarianLoansTab.fxml" />
