--- a/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
@@ -6,33 +6,32 @@
 
 <Tab xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" closable="false" text="Resources"
      fx:controller="com.crowvalley.tawelib.controller.librarian.LibrarianResourcesTabController">
-    <content>
-        <BorderPane>
-            <bottom>
-                <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                    <buttons>
-                        <Button fx:id="btnNewResource" minWidth="0.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Create New Resource" />
-                        <Button fx:id="btnViewResource" disable="true" mnemonicParsing="false" text="View Resource/Copies" />
-                        <Button fx:id="btnAmendResource" disable="true" mnemonicParsing="false" text="Amend Resource" />
-                        <Button fx:id="btnDeleteResource" disable="true" mnemonicParsing="false" text="Delete Resource" />
-                    </buttons>
-                    <BorderPane.margin>
-                        <Insets right="20.0" />
-                    </BorderPane.margin>
-                </ButtonBar>
-            </bottom>
-            <center>
-                <TableView fx:id="tblResources" prefHeight="302.0" prefWidth="416.0" BorderPane.alignment="CENTER">
-                    <columns>
-                        <TableColumn fx:id="colType" prefWidth="70.0" resizable="false" text="Type" />
-                        <TableColumn fx:id="colTitle" prefWidth="479.0" resizable="false" text="Title" />
-                        <TableColumn fx:id="colYear" prefWidth="70.0" resizable="false" text="Year" />
-                    </columns>
-                    <BorderPane.margin>
-                        <Insets left="10.0" right="10.0" top="10.0" />
-                    </BorderPane.margin>
-                </TableView>
-            </center>
-        </BorderPane>
-    </content>
+    <BorderPane>
+        <bottom>
+            <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                <buttons>
+                    <Button fx:id="btnNewResource" minWidth="0.0" prefHeight="25.0" prefWidth="143.0"
+                            text="Create New Resource"/>
+                    <Button fx:id="btnViewResource" disable="true" text="View Resource/Copies"/>
+                    <Button fx:id="btnAmendResource" disable="true" text="Amend Resource"/>
+                    <Button fx:id="btnDeleteResource" disable="true" text="Delete Resource"/>
+                </buttons>
+                <BorderPane.margin>
+                    <Insets right="20.0"/>
+                </BorderPane.margin>
+            </ButtonBar>
+        </bottom>
+        <center>
+            <TableView fx:id="tblResources" prefHeight="302.0" prefWidth="416.0" BorderPane.alignment="CENTER">
+                <columns>
+                    <TableColumn fx:id="colType" prefWidth="70.0" text="Type"/>
+                    <TableColumn fx:id="colTitle" prefWidth="479.0" text="Title"/>
+                    <TableColumn fx:id="colYear" prefWidth="70.0" text="Year"/>
+                </columns>
+                <BorderPane.margin>
+                    <Insets left="10.0" right="10.0" top="10.0"/>
+                </BorderPane.margin>
+            </TableView>
+        </center>
+    </BorderPane>
 </Tab>
