--- a/src/main/resources/fxml/librarian/addResource.fxml
+++ b/src/main/resources/fxml/librarian/addResource.fxml
@@ -43,7 +43,7 @@
                 <TextField fx:id="txtOptional4" layoutX="162.0" layoutY="253.0" visible="false" />
                 <TextField fx:id="txtOptional5" layoutX="162.0" layoutY="284.0" visible="false" />
 
-                <Button fx:id="btnSave" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0" text="Save Resource" />
+                <Button fx:id="btnSave" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0" visible="false" text="Save Resource" />
             </AnchorPane>
         </center>
         <left>
