--- a/src/main/resources/fxml/librarian/resource/addResource.fxml
+++ b/src/main/resources/fxml/librarian/resource/addResource.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.crowvalley.tawelib.controller.librarian.AddResourceController">
+      fx:controller="com.crowvalley.tawelib.controller.librarian.resource.AddResourceController">
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <Label layoutX="74.0" layoutY="71.0" text="Resource Type:" />
+                <Label fx:id="lblResource" layoutX="74.0" layoutY="71.0" text="Resource Type:" />
                 <ChoiceBox fx:id="cmbType" layoutX="162.0" layoutY="67.0" prefWidth="150.0" >
                     <items>
                         <FXCollections fx:factory="observableArrayList" >
@@ -43,13 +43,16 @@
                 <TextField fx:id="txtOptional4" layoutX="162.0" layoutY="253.0" visible="false" />
                 <TextField fx:id="txtOptional5" layoutX="162.0" layoutY="284.0" visible="false" />
 
-                <Button fx:id="btnSave" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0" visible="false" text="Save Resource" />
+                <Button fx:id="btnSave" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0"
+                        visible="false" text="Save Resource" />
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <ImageView fx:id="imgResourcePic" fitHeight="290.0" fitWidth="240.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" />
-                <Button fx:id="btnChangePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0" text="Choose Picture" />
+                <ImageView fx:id="imgResourcePic" fitHeight="290.0" fitWidth="240.0" layoutY="14.0"
+                           pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" />
+                <Button fx:id="btnChangePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0"
+                        text="Choose Picture" />
             </AnchorPane>
         </left>
     </BorderPane>
