--- a/src/main/resources/fxml/librarian/librarianUsersTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianUsersTab.fxml
@@ -12,7 +12,7 @@
                 <buttons>
                     <Button fx:id="btnNewUser" prefHeight="25.0" prefWidth="270.0" text="Create New User"/>
                     <Button fx:id="btnViewUser" disable="true" text="View User"/>
-                    <Button fx:id="btnAmendUser" disable="true" text="Amend User"/>
+                    <Button fx:id="btnEditUser" disable="true" text="Amend User"/>
                     <Button fx:id="btnDeleteUser" disable="true" text="Delete User"/>
                 </buttons>
                 <BorderPane.margin>
