--- a/src/main/resources/fxml/librarian/users/addNewUser.fxml
+++ b/src/main/resources/fxml/librarian/users/addNewUser.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
-<Tab xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" closable="false" text="Profile"
-     fx:controller="com.crowvalley.tawelib.controller.librarian.LibrarianProfileTabController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.crowvalley.tawelib.controller.librarian.users.AddNewUserController" >
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -18,6 +20,7 @@
                 <Label layoutX="120.0" layoutY="220.0" text="Town:"/>
                 <Label layoutX="111.0" layoutY="251.0" text="County:"/>
                 <Label layoutX="100.0" layoutY="282.0" text="Postcode:"/>
+
                 <TextField fx:id="txtUsername" layoutX="161.0" layoutY="30.0"/>
                 <TextField fx:id="txtFirstName" layoutX="161.0" layoutY="61.0"/>
                 <TextField fx:id="txtSurname" layoutX="161.0" layoutY="92.0"/>
@@ -27,17 +30,19 @@
                 <TextField fx:id="txtTown" layoutX="161.0" layoutY="216.0"/>
                 <TextField fx:id="txtCounty" layoutX="161.0" layoutY="247.0"/>
                 <TextField fx:id="txtPostcode" layoutX="161.0" layoutY="278.0"/>
-                <Button fx:id="btnSaveOrUpdate" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0"
-                        text="Update Profile"/>
+
+                <Button fx:id="btnAdd" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0"
+                        text="Add User"/>
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutY="54.0"
                            pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0"/>
-                <Button fx:id="btnChangePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0"
-                        text="Change Profile Picture"/>
+                <Button fx:id="btnChoosePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0"
+                        text="Choose Profile Picture"/>
+                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
             </AnchorPane>
         </left>
     </BorderPane>
-</Tab>
+</VBox>
