--- a/src/main/resources/fxml/librarian/resources/viewResource.fxml
+++ b/src/main/resources/fxml/librarian/resources/viewResource.fxml
@@ -10,7 +10,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceAndCopiesController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceController">
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="388.0" prefWidth="314.0" BorderPane.alignment="CENTER">
@@ -36,7 +37,7 @@
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
-                <Button fx:id="btnViewRequests" disable="true" layoutX="97.0" layoutY="364.0" text="View Copy Requests" />
+                <Button fx:id="btnViewRequests" disable="true" layoutX="64.0" layoutY="364.0" text="View Requests for Selected Copy" />
                 <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="289.0">
                     <columns>
                         <TableColumn fx:id="colCurrentBorrower" prefWidth="125.0" text="Current Borrower" />
