--- a/src/main/resources/fxml/librarian/resources/viewResource.fxml
+++ b/src/main/resources/fxml/librarian/resources/viewResource.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceController">
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="388.0" prefWidth="314.0" BorderPane.alignment="CENTER">
@@ -37,7 +36,8 @@
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
-                <Button fx:id="btnViewRequests" disable="true" layoutX="64.0" layoutY="364.0" text="View Requests for Selected Copy" />
+                <Button fx:id="btnAddCopy" layoutX="36.0" layoutY="365.0" prefHeight="25.0" prefWidth="115.0" text="Add Copy" />
+                <Button fx:id="btnViewRequests" disable="true" layoutX="160.0" layoutY="365.0" prefHeight="25.0" prefWidth="115.0" text="View Requests" />
                 <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="289.0">
                     <columns>
                         <TableColumn fx:id="colCurrentBorrower" prefWidth="125.0" text="Current Borrower" />
