--- a/src/main/resources/fxml/librarian/librarianLoansTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianLoansTab.fxml
@@ -24,9 +24,8 @@
         <bottom>
             <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <buttons>
-                    <Button fx:id="btnNewLoan" prefHeight="25.0" prefWidth="200.0" text="Create New Loan"/>
-                    <Button fx:id="btnViewOrEditLoan" disable="true" prefHeight="25.0" prefWidth="200.0" text="View/Edit Loan"/>
-                    <Button fx:id="btnEndLoan" disable="true" prefHeight="25.0" prefWidth="200.0" text="End Loan"/>
+                    <Button fx:id="btnNewLoan" prefHeight="25.0" prefWidth="300.0" text="Create New Loan"/>
+                    <Button fx:id="btnEndLoan" prefHeight="25.0" prefWidth="300.0" disable="true" text="End Loan"/>
                 </buttons>
                 <opaqueInsets>
                     <Insets/>
