--- a/src/main/resources/fxml/librarian/resources/viewCopyRequests.fxml
+++ b/src/main/resources/fxml/librarian/resources/viewCopyRequests.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,10 +9,9 @@
 
 <VBox prefHeight="279.0" prefWidth="318.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewCopyRequestsController">
-   <children>
       <AnchorPane prefHeight="278.0" prefWidth="318.0">
-         <children>
             <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
+            <Label fx:id="lblCopyTitle" layoutX="88.0" layoutY="18.0" text="Copy: " />
             <TableView fx:id="tblCopyRequests" layoutX="14.0" layoutY="54.0" prefHeight="179.0" prefWidth="290.0">
                <columns>
                   <TableColumn fx:id="colUsername" prefWidth="145.0" text="Username" />
@@ -19,7 +19,5 @@
                </columns>
             </TableView>
             <Button fx:id="btnApproveRequest" disable="true" layoutX="105.0" layoutY="244.0" text="Approve Request" />
-         </children>
       </AnchorPane>
-   </children>
 </VBox>
