--- a/src/main/resources/fxml/user/userProfile.fxml
+++ b/src/main/resources/fxml/user/userProfile.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.librarian.users.ViewOrEditUserController">
-    <BorderPane prefHeight="405.0" prefWidth="640.0">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.user.UserProfileController">
+    <BorderPane prefHeight="413.0" prefWidth="640.0">
         <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <Label layoutX="97.0" layoutY="45.0" text="Username:" />
@@ -37,8 +37,8 @@
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutX="14.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-                <Button fx:id="btnChangePic" layoutX="63.0" layoutY="334.0" prefHeight="25.0" prefWidth="143.0" text="Change Profile Picture" />
+                <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutX="14.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+                <Button fx:id="btnChangePic" layoutX="62.0" layoutY="334.0" prefHeight="25.0" prefWidth="143.0" text="Change Profile Picture" />
                 <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
             </AnchorPane>
         </left>
