--- a/src/main/resources/fxml/user/userViewResource.fxml
+++ b/src/main/resources/fxml/user/userViewResource.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,7 +10,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceController">
+<VBox prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.crowvalley.tawelib.controller.user.UserViewResourceController">
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="389.0" prefWidth="309.0" BorderPane.alignment="CENTER">
@@ -40,22 +39,13 @@
                 <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
                 <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="354.0">
                     <columns>
-                        <TableColumn fx:id="colCurrentBorrower" prefWidth="120.0" text="Current Borrower" />
                         <TableColumn fx:id="colLoanDuration" prefWidth="85.0" text="Loan Duration" />
                         <TableColumn fx:id="colLocation" prefWidth="77.0" text="Location" />
                         <TableColumn fx:id="colNumOfRequests" prefWidth="69.0" text="# Requests" />
+                        <TableColumn fx:id="colInfo" prefWidth="120.0" text="Additional Info" />
                     </columns>
                 </TableView>
-                <ButtonBar layoutX="14.0" layoutY="353.0" prefHeight="40.0" prefWidth="289.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="353.0">
-                    <buttons>
-                        <Button fx:id="btnAddCopy" prefHeight="25.0" prefWidth="119.0" text="Add Copy" />
-                        <Button fx:id="btnDelete" disable="true" text="Delete Copy" />
-                        <Button fx:id="btnViewRequests" disable="true" text="View Requests" />
-                    </buttons>
-                    <padding>
-                        <Insets left="-20.0" top="10.0" />
-                    </padding>
-                </ButtonBar>
+                <Button fx:id="btnMakeRequest" disable="true" layoutX="145.0" layoutY="362.0" text="Make Request" />
             </AnchorPane>
         </left>
     </BorderPane>
