--- a/src/main/resources/fxml/user/userBrowseResources.fxml
+++ b/src/main/resources/fxml/user/userBrowseResources.fxml
@@ -2,14 +2,19 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.crowvalley.tawelib.controller.user.UserBrowseResourcesController">
+<?import javafx.collections.FXCollections?>
+<?import com.crowvalley.tawelib.model.resource.ResourceType?>
+<?import javafx.scene.control.ChoiceBox?>
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.user.UserBrowseResourcesController">
     <BorderPane prefHeight="408.0" prefWidth="640.0">
         <center>
             <TableView fx:id="tblResources" prefHeight="302.0" prefWidth="620.0" BorderPane.alignment="CENTER">
@@ -30,10 +35,23 @@
                 </BorderPane.margin>
             </Button>
         </bottom>
-      <top>
-          <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-              <Button fx:id="btnBack" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="&lt;&lt; Back"/>
+        <top>
+            <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+                <Button fx:id="btnBack" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="&lt;&lt; Back" />
+                <Label layoutX="227.0" layoutY="14.0" text="Resource Type:" />
+                <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <ResourceType fx:value="ALL" />
+                            <ResourceType fx:value="BOOK" />
+                            <ResourceType fx:value="DVD" />
+                            <ResourceType fx:value="LAPTOP" />
+                        </FXCollections>
+                    </items>
+                </ChoiceBox>
+                <TextField fx:id="txtSearch" layoutX="432.0" layoutY="10.0" />
+                <Button fx:id="btnSearch" layoutX="577.0" layoutY="10.0" text="Search" />
           </AnchorPane>
-      </top>
+        </top>
     </BorderPane>
 </VBox>
