--- a/src/main/resources/fxml/user/userFinesAndPayments.fxml
+++ b/src/main/resources/fxml/user/userFinesAndPayments.fxml
@@ -7,14 +7,17 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="353.0" prefWidth="540.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.crowvalley.tawelib.controller.user.UserFinesAndPaymentsController">
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<VBox prefHeight="353.0" prefWidth="540.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.user.UserFinesAndPaymentsController">
     <BorderPane prefHeight="400.0" prefWidth="540.0">
         <center>
             <TableView fx:id="tblFinesAndPayments" prefHeight="345.0" prefWidth="529.0" BorderPane.alignment="CENTER">
                 <columns>
                     <TableColumn fx:id="colAmount" prefWidth="80.0" text="Amount" />
-                    <TableColumn fx:id="colType" prefWidth="454.0" text="Fine or Payment?" />
+                    <TableColumn fx:id="colDate" prefWidth="80.0" text="Date" />
+                    <TableColumn fx:id="colType" prefWidth="357.0" text="Fine or Payment?" />
                 </columns>
                 <BorderPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -22,11 +25,16 @@
             </TableView>
         </center>
         <top>
-            <Button fx:id="btnBack" text="&lt;&lt; Back" BorderPane.alignment="TOP_LEFT">
-                <BorderPane.margin>
-                    <Insets left="10.0" top="10.0" />
-                </BorderPane.margin>
-            </Button>
+            <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
+                <children>
+                    <Button fx:id="btnBack" layoutX="11.0" layoutY="11.0" text="&lt;&lt; Back" />
+                    <Label layoutX="157.0" layoutY="15.0" text="Between:" />
+                    <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" />
+                    <Label layoutX="335.0" layoutY="15.0" text="and" />
+                    <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" />
+                    <Button fx:id="btnClearDate" layoutX="485.0" layoutY="11.0" text="Clear" />
+                </children>
+            </AnchorPane>
         </top>
     </BorderPane>
 </VBox>
