--- a/src/main/resources/fxml/librarian/resources/addResource.fxml
+++ b/src/main/resources/fxml/librarian/resources/addResource.fxml
@@ -15,7 +15,7 @@
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <Label fx:id="lblResource" layoutX="74.0" layoutY="71.0" text="Resource Type:" />
+                <Label layoutX="74.0" layoutY="71.0" text="Resource Type:" />
                 <ChoiceBox fx:id="cmbType" layoutX="162.0" layoutY="67.0" prefWidth="150.0">
                     <items>
                         <FXCollections fx:factory="observableArrayList">
