--- a/src/main/resources/fxml/librarian/resources/viewResource.fxml
+++ b/src/main/resources/fxml/librarian/resources/viewResource.fxml
@@ -16,8 +16,8 @@
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="389.0" prefWidth="309.0" BorderPane.alignment="CENTER">
-                <Label fx:id="lblTitle" layoutX="102.0" layoutY="181.0" text="Title:" />
-                <Label fx:id="lblYear" layoutX="102.0" layoutY="212.0" text="Year:" />
+                <Label layoutX="102.0" layoutY="181.0" text="Title:" />
+                <Label layoutX="102.0" layoutY="212.0" text="Year:" />
                 <Label fx:id="lblOptional1" layoutX="88.0" layoutY="243.0" visible="false" />
                 <Label fx:id="lblOptional2" layoutX="76.0" layoutY="274.0" visible="false" />
                 <Label fx:id="lblOptional3" layoutX="93.0" layoutY="305.0" visible="false" />
